--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-plotly
-requests
-beautifulsoup4
-Pillow
-rich
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+matplotlib-venn==1.1.2
+pandas==2.2.2
+pandas-datareader==0.10.0
+pandas-gbq==0.28.0
+pandas-stubs==2.2.2.240909
+seaborn==0.13.2
+streamlit==1.43.1
